# tender-manager

./: .antigravityignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.e2e  LICENSE  README.md  compose.yaml  entrypoint.sh  fly.toml  jsconfig.json  nginx.conf  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.agents/rules/: python-async-programming-expert.md  python-backend-development-with-fastapi.md  python-testing-best-practices.md
.agents/workflows/: agent-expert-code-reviewer.md  commit.md
.github/workflows/: pipeline.yaml
e2e/: api_integration.spec.js  api_logic.spec.js  companies.spec.js  dashboard.spec.js  login.spec.js  profile.spec.js  register.spec.js  smoke.spec.js  tenders.spec.js
frontend/: companies.html  dashboard.html  index.html  profile.html  tenders.html
frontend/css/: style.css
frontend/js/: api.js  companies.js  dashboard.js  login.js  profile.js  tenders.js
migrations/: env.py
migrations/versions/: 41ea71e2885b_create_users_table.py  6c46d663f42d_add_tenders_table.py  8d5819f222d9_replace_todos_with_companies.py  b78c640317cd_create_todos_table.py
src/: app.py  security.py  settings.py
src/infra/: entities.py
src/presentation/: schemas.py
src/routers/: auth.py  companies.py  dashboard.py  tenders.py  (+2 more)
tests/: app_test.py  auth_test.py  companies_test.py  conftest.py  dashboard_test.py  db_test.py  factories.py  security_test.py  tender_schema_test.py  tender_service_test.py  tenders_test.py  test_db.py  todos_test.py  users_test.py
(+35 files in other folders)
